--- a/assets/blog.html
+++ b/assets/blog.html
@@ -6,7 +6,7 @@
     <title>
         ACM SAHYADRI
     </title>
-    <link rel="icon" href="./images/Untitled design (1).png" type="image/x-icon">
+    <link rel="icon" href="./images/ACM logo sahyadri black.png" type="image/x-icon">
 
 
 
@@ -221,8 +221,9 @@
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="event.html">EVENTS</a></li>
                     <li><a href="../assets/team.html">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+
 
 
 
