--- a/assets/event.html
+++ b/assets/event.html
@@ -6,7 +6,7 @@
     <title>
         ACM SAHYADRI
     </title>
-    <link rel="icon" href="./images/Untitled design (1).png" type="image/x-icon">
+  <link rel="icon" href="./images/ACM logo sahyadri black.png" type="image/x-icon">
 
 
 
@@ -278,8 +278,9 @@
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="event.html">EVENTS</a></li>
                     <li><a href="team.html">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+
 
 
 
@@ -317,15 +318,15 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/expert talk@4x-80.jpg" alt="a"
-                            style="width: -webkit-fill-available">
+                        <img class="card-img-top" src="../assets/images/speaker4.jpeg" alt="a"
+                            style="width: 95%;">
                     </div>
                     <div class=" card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR </strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 04</h6>
 
 
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
 
                     </div>
                 </div>
@@ -335,20 +336,36 @@
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/dinesh.jpeg" alt="BIKE"
-                            style="width: -webkit-fill-available;">
+                            style="width: 95%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 03</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
                     </div>
                 </div>
             </div>
-
-
-
-
         </div>
+        <div class="row">
+            <div style="text-align: justify; margin-left: 35px;">
+                <br>
+                <h3>&nbsp;ONGOING EVENTS</h3>
+                <br>
+            </div>
+            <div class="col-sm-4" style="padding: 50px;">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/quotecode.jpeg" style="width:95%;" alt="BIKE"
+                            style="width: 95%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S CONTEST</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">QOUTE THE CODE</h6>
+                        <a href="https://www.instagram.com/p/CBLgBKVDAnX/" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
+                    </div>
+                </div>
+            </div>
+          </div>
 
         <div class="row">
             <div style="text-align: justify; margin-left: 35px;">
@@ -359,13 +376,13 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/prashant.jpeg" alt="BIKE"
-                            style="width: -webkit-fill-available;">
+                        <img class="card-img-top" src="../assets/images/prashant.jpeg" style="width:95%;" alt="BIKE"
+                            style="width: 95%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 02</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="../moreinfo/speaker2.html" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
                     </div>
                 </div>
             </div>
@@ -373,12 +390,12 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/speaker1.jpeg" alt="BIKE" style="width: 270px;">
+                        <img class="card-img-top" src="../assets/images/speaker1.jpeg" alt="BIKE" style="width: 95%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 01</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="https://www.youtube.com/watch?v=p46dD0Mxnyc&t=107s" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
             </div>
@@ -386,12 +403,12 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/acmp.jpeg" alt="BIKE" style="width: 270px;">
+                        <img class="card-img-top" src="../assets/images/acmp.jpeg" alt="BIKE" style="width: 95%;">
                     </div>
                     <div class=" card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">PROGRAMMING CONCEPTS</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="https://www.youtube.com/watch?v=44fTOE7uoOI" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
             </div>
@@ -400,13 +417,13 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/classtalks.jpeg" alt="BIKE"
-                            style="width: 242px; ">
+                        <img class="card-img-top" src="../assets/images/acmnitk.png" alt="acmnitk"
+                            style="width: 280px;height:185px;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM TALKS</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">CLASSROOM TALK</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <h4 class="card-title"><strong>ACM MEETUP</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">MEETUP 2</h6>
+                        <a href="../moreinfo/acmmeetup.html" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
                     </div>
                 </div>
             </div>
@@ -418,8 +435,8 @@
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM TALKS</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">CYBER SAFE CMAPUS</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <h6 class="font-weight-bold indigo-text py-2">CYBER SAFE CAMPUS</h6>
+                        <a href="https://www.mangalorean.com/workshop-on-cyber-safe-campus-held-at-sahyadri-college/" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
                     </div>
                 </div>
             </div>
@@ -427,12 +444,12 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/slide2.jpeg" alt="BIKE" style="width: 270px">
+                        <img class="card-img-top" src="../assets/images/slide2.jpeg" alt="meetup1" style="width: 270px">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM MEETUP</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">MEETUP 01</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="https://www.instagram.com/p/B3hPLk1HnvX/" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
                     </div>
                 </div>
             </div>
@@ -441,13 +458,13 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/inaugration.jpeg" alt="BIKE"
+                        <img class="card-img-top" src="../assets/images/inaugration.jpeg" alt="inaugration"
                             style="width: 270px ">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM LAUNCH</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">INAUGRATION & GUEST TALK</h6>
-                        <button class="btn blue-gradient">MORE</button>
+                        <a href="https://www.instagram.com/p/B3hPqBfHA5l/" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
                     </div>
                 </div>
             </div>
