--- a/assets/team.html
+++ b/assets/team.html
@@ -6,7 +6,7 @@
     <title>
         ACM SAHYADRI
     </title>
-    <link rel="icon" href="./images/Untitled design (1).png" type="image/x-icon">
+    <link rel="icon" href="./images/ACM logo sahyadri black.png" type="image/x-icon">
 
 
 
@@ -26,7 +26,7 @@
 
     <style>
         body {
-          
+
             line-height: 1.8;
             color: black;
             font-family: 'Nova Square';
@@ -230,8 +230,9 @@
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="event.html">EVENTS</a></li>
                     <li><a href="team.html">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+
 
 
 
@@ -272,12 +273,12 @@
                         <h6 class="font-weight-bold indigo-text py-2">PROFESSIONAL SUPPORT</h6>
                         <ul class="social-icons">
                             <li><a href="https://www.instagram.com/harisha.17/"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://mobile.twitter.com/harishairbail"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://in.linkedin.com/in/harisha-airbail-838b1462"><i class="fa fa-linkedin"></i></a></li>
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/0/#inbox?compose=GFrJzkcCXcGfKVGNJZsKmvgtvWhXTTRrDFXTKcbNmXtXCnDFNmxgFKCFXGXNLzMHFZDz" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
 
                     </div>
                 </div>
@@ -300,7 +301,7 @@
                         </ul>
 
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                      <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJfrtRqLJbXknGDvgwCWXRfZsNPkPZZQHspCPLWhVKMmSBPMQjhGDxKXhKlTCHDtcTRdchg" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
 
                     </div>
                 </div>
@@ -322,7 +323,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCKHRMPHSdmJJFvKMdSBVQtvkvRScjQdxmXFJWxpMJNbwmbWPPssjtvSjgJKqdXPjBqZRKtL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -343,7 +344,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCKHRMPHSdmJJFvKMdSBVQtvkvRScjQdxmXFJWxpMJNbwmbWPPssjtvSjgJKqdXPjBqZRKtL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -364,7 +365,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJTLGXxfHBdrlLldwSMMfmXsZqNNvLlVdDcSQZhwqPgCCLRRwHLLWWSvlbpxrQJNkZKSsVB" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -385,7 +386,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWtVbFLHPkxBtdgClLXMLmWFczrHvlFHsXKtGVWTHFffHkhvjNXPpfXSrSndvLLTSBMkpSkBg" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -406,7 +407,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLHcsDqTMCHStppPbvxqSdXtKMvNWFBsDJdSJDwZNNzhDfNJHbnJcwTKvkbfXHzlVjHL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -427,7 +428,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLHcsDqTMCHStppPbvxqSdXtKMvNWFBsDJdSJDwZNNzhDfNJHbnJcwTKvkbfXHzlVjHL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -448,7 +449,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWsCQgQxtJCxxHJtSLlvqZRzhBmbtFMmGBzxDpcfKpPgdXFVrnDsDqDBlqpTxzlPqNFhfbQwb" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -469,7 +470,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcSMTtfzFJWCwdJhvNDTQMNDxRWDWwMjgsZhtQdTvqpSVLDbTXFtNMzqQXnKFppGFmZrRCwQV" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -490,7 +491,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCHrjmdKsLXKcZtCfsqzbDMcRGXqtkhFBFBfXWTZnQCdGXGfvGnLwNxzdflzlcLWcCgvxCHL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -511,7 +512,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcSDbgvJRTWCDJVmRtjltBnCqDCPkmLdBlLvbhDjtdQvnCdtqXqZvLzFdcVvXlrDPhjcWwcXv" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -532,7 +533,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTZCFzNJssNsDzlRqztJqnkXxthnRMsKGMxKShRTKpXTcKRJLDppgxCSxQMSRzXnJjnq" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -553,7 +554,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWsvBbFFlTBlQmcxHVmFrGkfCgHJMCJGpJgzgnSwftpZxxZPFjPphDjjmlzRHkWhJfxsnbVpB" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -574,7 +575,7 @@
 
                         </ul>
 
-                        <button class="btn blue-gradient">CONTACT</button>
+                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJvlqmpjmDhTFJSLndbRXcDLhJGfGfFqHSDXWDQmmRhVJKngBsgBLqZHVGvHVBmzZvFLXVV" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
