--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         ACM SAHYADRI
     </title>
-    <link rel="icon" href="./assets/images/Untitled design (1).png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/ACM logo sahyadri black.png" type="image/x-icon">
 
     <meta property="og:title" content="ACM - SAHYADRI">
     <meta property="og:description" content="The official website of ACM chapter Sahyadri!">
@@ -253,10 +253,8 @@
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="./assets/event.html">EVENTS</a></li>
                     <li><a href="./assets/team.html">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
                     <li><a href="./assets/blog.html">BLOGS</a></li>
-
-
+                    <li><a href="#">CONTACT</a></li>
 
                 </ul>
             </div>
@@ -377,7 +375,7 @@
                         <img src="./assets/images/teaching.png" alt="img" width="100px">
                     </b>
                 </div>
-          
+
             <!--<a href="./activity/webinar.html">-->
                 <div class="col-sm-4 ho"
                     style="text-align: center; padding:100px; background-color: cornflowerblue; color: cornsilk;">
