--- a/assets/blog.html
+++ b/assets/blog.html
@@ -192,7 +192,7 @@
         }
 
         .navbar-default .navbar-toggle .icon-bar {
-            background-color: blue;
+            background-color: #57a8d5;
         }
 
         .row {
@@ -222,7 +222,7 @@
                     <li><a href="event.html">EVENTS</a></li>
                     <li><a href="../assets/team.html">TEAM</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform">CONTACT</a></li>
 
 
 
