--- a/assets/team.html
+++ b/assets/team.html
@@ -178,7 +178,7 @@
 
 
         .navbar-default .navbar-toggle .icon-bar {
-            background-color: blue;
+            background-color: #57a8d5;
         }
 
         .carousel-inner {
@@ -231,7 +231,7 @@
                     <li><a href="event.html">EVENTS</a></li>
                     <li><a href="team.html">TEAM</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform">CONTACT</a></li>
 
 
 
