--- a/assets/team.html
+++ b/assets/team.html
@@ -26,7 +26,7 @@
 
     <style>
         body {
-
+          
             line-height: 1.8;
             color: black;
             font-family: 'Nova Square';
@@ -245,7 +245,7 @@
 
 
 
-    <div id="rides" style="background: #2A81AD;">
+    <div id="rides" style="background: #03132d;">
         <br>
         <br>
         <div style="text-align: center;">
