--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <br>
                 <p style="font-size: 20px">
                     ACM, the world&#39;s largest educational and scientific computing society, delivers resources that
-                    advance computing as a science and a profession.ACM provides the computing field's premier Digital
+                    advance computing as a science and a profession. ACM provides the computing field's premier Digital
                     Library and serves its members and the computing profession with leading-edge publications,
                     conferences, and career resources.
                 </p>
@@ -339,8 +339,7 @@
         </div>
     </section>
 
-
-    <div class="services" style="margin: 20px  20px; text-align: center;">
+  <div class="services" style="margin: 20px  20px; text-align: center;">
         <br>
         <h2 style="margin-bottom:30px"> <b> INITIATIVES & ACTIVITIES </b> </h2>
 
@@ -354,7 +353,7 @@
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
-                            ACM Research
+                            ACM<br/>Research
                         </h1>
                         <br>
                         <img src="./assets/images/research.png" alt="img" width="100px">
@@ -369,7 +368,7 @@
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
-                            ACM Workshop
+                            ACM<br/>Workshop
                         </h1>
                         <br>
                         <img src="./assets/images/teaching.png" alt="img" width="100px">
@@ -381,7 +380,7 @@
                     style="text-align: center; padding:100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
-                            ACM Webinar
+                            ACM<br/>Webinar
                         </h1>
                         <br>
                         <img src="./assets/images/communication.png" alt="img" width="100px">
@@ -395,7 +394,7 @@
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
-                            ACM Contest
+                            ACM<br/>Contest
                         </h1>
                         <br>
                         <img src="./assets/images/contest.png" alt="img" width="100px">
@@ -407,7 +406,7 @@
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
-                            ACM Technical
+                            ACM<br/>Technical
                         </h1>
                         <br>
                         <img src="./assets/images/web-settings.png" alt="img" width="100px">
@@ -419,7 +418,7 @@
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
-                            ACM Training
+                            ACM<br/>Training
                         </h1>
                         <br>
                         <img src="./assets/images/training.png" alt="img" width="100px">
