--- a/moreinfo/acmmeetup.html
+++ b/moreinfo/acmmeetup.html
@@ -147,7 +147,13 @@
       margin-left: 0;
       margin-right: 0;
   }
-
+  @media (max-width: 650px) {
+    .acmmeet{
+      margin-top: 6%;
+      margin-bottom: 18%;
+      width:75%;
+    }
+}
 
 </style>
   </head>
@@ -180,7 +186,7 @@
         </nav>
 
        <center>
-         <img src="../assets/images/acmmeetup.png"  style="width:76%;padding-top:8%;padding-bottom:15%;" alt="prashanth shenoy">
+         <img class="acmmeet" src="../assets/images/acmmeetup.png"  style="width:74%;padding-top:5%;padding-bottom:10%;" alt="prashanth shenoy">
        </center>
 
 <hr>
