--- a/moreinfo/speaker2.html
+++ b/moreinfo/speaker2.html
@@ -147,7 +147,13 @@
       margin-left: 0;
       margin-right: 0;
   }
-
+  @media (max-width: 650px) {
+    .speaker{
+      margin-top: 6%;
+      margin-bottom: 20%;
+      width:75%;
+    }
+}
 
 </style>
   </head>
@@ -173,9 +179,6 @@
                         <li><a href="../assets/team.html">TEAM</a></li>
                         <li><a href="../assets/blog.html">BLOGS</a></li>
                         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform">CONTACT</a></li>
-
-
-
 
                     </ul>
                 </div>
