--- a/moreinfo/speaker2.html
+++ b/moreinfo/speaker2.html
@@ -6,7 +6,7 @@
     <title>
         ACM SAHYADRI
     </title>
-    <link rel="icon" href="./images/ACM logo sahyadri black.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/ACM logo sahyadri black.png" type="image/x-icon">
 
 
 
