--- a/assets/team.html
+++ b/assets/team.html
@@ -278,7 +278,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/0/#inbox?compose=GFrJzkcCXcGfKVGNJZsKmvgtvWhXTTRrDFXTKcbNmXtXCnDFNmxgFKCFXGXNLzMHFZDz" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="harisha.cs@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
 
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                         </ul>
 
 
-                      <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJfrtRqLJbXknGDvgwCWXRfZsNPkPZZQHspCPLWhVKMmSBPMQjhGDxKXhKlTCHDtcTRdchg" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                      <a href="likihthraj10@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
 
                     </div>
                 </div>
@@ -323,7 +323,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCKHRMPHSdmJJFvKMdSBVQtvkvRScjQdxmXFJWxpMJNbwmbWPPssjtvSjgJKqdXPjBqZRKtL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="Dhanush.r.adoor@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -344,7 +344,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCKHRMPHSdmJJFvKMdSBVQtvkvRScjQdxmXFJWxpMJNbwmbWPPssjtvSjgJKqdXPjBqZRKtL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="vineetnayak777@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -365,7 +365,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJTLGXxfHBdrlLldwSMMfmXsZqNNvLlVdDcSQZhwqPgCCLRRwHLLWWSvlbpxrQJNkZKSsVB" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="vishw.kamath@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWtVbFLHPkxBtdgClLXMLmWFczrHvlFHsXKtGVWTHFffHkhvjNXPpfXSrSndvLLTSBMkpSkBg" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="kamathsamarth@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -407,7 +407,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLHcsDqTMCHStppPbvxqSdXtKMvNWFBsDJdSJDwZNNzhDfNJHbnJcwTKvkbfXHzlVjHL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="karthikdinesh208@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -428,7 +428,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLHcsDqTMCHStppPbvxqSdXtKMvNWFBsDJdSJDwZNNzhDfNJHbnJcwTKvkbfXHzlVjHL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="vrashankrao@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -449,7 +449,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWsCQgQxtJCxxHJtSLlvqZRzhBmbtFMmGBzxDpcfKpPgdXFVrnDsDqDBlqpTxzlPqNFhfbQwb" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="uttamkh.is18@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -470,7 +470,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcSMTtfzFJWCwdJhvNDTQMNDxRWDWwMjgsZhtQdTvqpSVLDbTXFtNMzqQXnKFppGFmZrRCwQV" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="Sushmaberkala2000@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -491,7 +491,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCHrjmdKsLXKcZtCfsqzbDMcRGXqtkhFBFBfXWTZnQCdGXGfvGnLwNxzdflzlcLWcCgvxCHL" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="rovitfernandes@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -512,7 +512,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcSDbgvJRTWCDJVmRtjltBnCqDCPkmLdBlLvbhDjtdQvnCdtqXqZvLzFdcVvXlrDPhjcWwcXv" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="sudharshan6acharya@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -533,7 +533,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTZCFzNJssNsDzlRqztJqnkXxthnRMsKGMxKShRTKpXTcKRJLDppgxCSxQMSRzXnJjnq" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="trishar360@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -554,7 +554,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=DmwnWsvBbFFlTBlQmcxHVmFrGkfCgHJMCJGpJgzgnSwftpZxxZPFjPphDjjmlzRHkWhJfxsnbVpB" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="shishir.cs18@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -575,7 +575,7 @@
 
                         </ul>
 
-                        <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJvlqmpjmDhTFJSLndbRXcDLhJGfGfFqHSDXWDQmmRhVJKngBsgBLqZHVGvHVBmzZvFLXVV" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mohammedthohif@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
