--- a/assets/team.html
+++ b/assets/team.html
@@ -278,7 +278,7 @@
 
                         </ul>
 
-                        <a href="harisha.cs@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:harisha.cs@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
 
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                         </ul>
 
 
-                      <a href="likihthraj10@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                      <a href="mailto:likihthraj10@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
 
                     </div>
                 </div>
@@ -323,7 +323,7 @@
 
                         </ul>
 
-                        <a href="Dhanush.r.adoor@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:Dhanush.r.adoor@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -344,7 +344,7 @@
 
                         </ul>
 
-                        <a href="vineetnayak777@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:vineetnayak777@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -365,7 +365,7 @@
 
                         </ul>
 
-                        <a href="vishw.kamath@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:vishw.kamath@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
 
                         </ul>
 
-                        <a href="kamathsamarth@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:kamathsamarth@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -407,7 +407,7 @@
 
                         </ul>
 
-                        <a href="karthikdinesh208@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:karthikdinesh208@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -428,7 +428,7 @@
 
                         </ul>
 
-                        <a href="vrashankrao@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:vrashankrao@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -449,7 +449,7 @@
 
                         </ul>
 
-                        <a href="uttamkh.is18@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:uttamkh.is18@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -470,7 +470,7 @@
 
                         </ul>
 
-                        <a href="Sushmaberkala2000@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:Sushmaberkala2000@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -491,7 +491,7 @@
 
                         </ul>
 
-                        <a href="rovitfernandes@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:rovitfernandes@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -512,7 +512,7 @@
 
                         </ul>
 
-                        <a href="sudharshan6acharya@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:sudharshan6acharya@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -533,7 +533,7 @@
 
                         </ul>
 
-                        <a href="trishar360@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:trishar360@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -554,7 +554,7 @@
 
                         </ul>
 
-                        <a href="shishir.cs18@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:shishir.cs18@sahyadri.edu.in" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -575,7 +575,7 @@
 
                         </ul>
 
-                        <a href="mohammedthohif@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:mohammedthohif@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
